<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="actions"
            type="dev.forcetower.heroes.view.expensive.ExpensiveActions" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no"
            app:imageUrl="@{actions.comic.thumbnail}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <View
            android:id="@+id/overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:textSize="43sp"
            android:textColor="?attr/colorOnPrimary"
            android:letterSpacing="-0.03"
            app:comicTitle="@{actions.comic.title}"
            app:comicIssueNumber="@{actions.comic.issueNumber}"
            app:fontFamily="@font/bebas_regular"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:paddingEndSystemWindowInsets="@{true}"
            app:paddingStartSystemWindowInsets="@{true}"
            tools:text="@tools:sample/lorem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="15sp"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@{actions.comic.description}"
            app:paddingEndSystemWindowInsets="@{true}"
            app:paddingStartSystemWindowInsets="@{true}"
            app:layout_constraintBottom_toTopOf="@id/costs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@tools:sample/lorem/random"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/costs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:textColor="@color/colorOnPrimary"
            android:textSize="16sp"
            android:text="@{@string/comic_price_format(actions.comic.price)}"
            app:paddingBottomSystemWindowInsets="@{true}"
            app:paddingEndSystemWindowInsets="@{true}"
            app:paddingStartSystemWindowInsets="@{true}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="For only: US$ 399! That's a great price btw"/>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="?attr/colorOnPrimary"
            android:onClick="@{() -> actions.onNavigateBack()}"
            style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:paddingTopSystemWindowInsets="@{true}"
            app:paddingStartSystemWindowInsets="@{true}" />

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:goneUnless="@{actions.comic.title != null}"
            app:constraint_referenced_ids="title,costs,description,thumbnail"/>

        <TextView
            android:id="@+id/no_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="26sp"
            android:text="@string/no_expensive_comic"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:visibility="gone"
            app:fontFamily="@font/bebas_regular"
            app:goneUnless="@{actions.comic.title == null &amp;&amp; !actions.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            app:goneIf="@{!actions.loading}"
            app:paddingTopSystemWindowInsets="@{true}"
            app:paddingEndSystemWindowInsets="@{true}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:indeterminateTint="?attr/colorSecondary"
                style="@style/Widget.AppCompat.ProgressBar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comics_content_loading"
                android:textSize="15sp"
                android:textColor="@color/colorOnPrimary"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
