...
                    android:textColor="?attr/colorOnBackground"
                    android:letterSpacing="-0.03"
                    app:fontFamily="@font/bebas_regular"
                    tools:text="Captain Marvel"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/comic_details_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{actions.character.description}"
                    android:textSize="16sp"
                    android:maxLines="3"
...
                    android:visibility="gone"
                    android:text="@string/no_description_text"
                    android:textSize="16sp"
                    app:goneUnless="@{actions.character.description.length() == 0}"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_expensive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> actions.onNavigateToMostExpensive()}"
                    android:layout_marginTop="16dp"
                    android:text="@string/most_expensive_comic"/>
            </LinearLayout>
...
