...
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:paddingTopSystemWindowInsets="@{true}"
            app:paddingStartSystemWindowInsets="@{true}"
            app:paddingEndSystemWindowInsets="@{true}"
            app:liftOnScrollTargetViewId="@id/characters_recycler"
            app:liftOnScroll="true">
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
...
